Some other time Logic to implement is generating count of goodNumbers with variable length